# image_prossesing_librarry

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Doxyfile  README.md  SINIF_OZETI.md  SUNUM_SLABLAR.md
include/: BrightnessAdjust.h  EdgeDetection.h  Filter.h  FilterPipeline.h  GaussianBlur.h  Image.h  ImageViewer.h
src/: BrightnessAdjust.cpp  EdgeDetection.cpp  FilterPipeline.cpp  GaussianBlur.cpp  Image.cpp  ImageViewer.cpp  kenar_bulma.cpp  main.cpp
tests/: CMakeLists.txt  test_filters.cpp  test_image.cpp  test_integration.cpp  test_pipeline.cpp
